# terminal-coffkell

./: .editorconfig  .envrc  .ghcid  .gitignore  LICENSE  README.md  cabal.project  flake.nix  terminal-coffkell.cabal
src/: Analytics.hs  Examples.hs  Foo.hs  Input.hs  Yum.hs
test/: Discover.hs  MainShim.hs  Spec.hs
